# qst-frontend-rust

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  Cargo.toml  LICENSE_MIT  README.md  build.rs  client.cpp  compile_commands.json  dialog.cpp  dialog.h  edit.cpp  edit.h  main.cpp  package.json  pnpm-lock.yaml  select.cpp  select.h  trie.hpp
src/: App.vue  CMakeLists.txt  comm.rs  connect.rs  core.cpp  core.h  dialog.cpp  dialog.h  flag.rs  lib.rs  main.cpp  main.js  main.rs  rpc.rs  select.cpp  select.h  select.rs  ui.rs  utils.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/qst-grpc/src/: daemon.proto
src-tauri/src/: arg.rs  main.rs  rpc.rs  server.rs
src-tauri/src/rpc/: error.rs  service.rs
src-tauri/src/rpc/service/: daemon.rs  extension.rs  utils.rs
src/comm/: CMakeLists.txt  comm.cpp  comm.h
src/components/: Input.vue  List.vue
src/rpc/: daemon.rs  def.rs  error.rs  ext.rs  extension.rs  response.rs  service.rs  utils.rs
src/rpc/daemon/: request.rs  response.rs
src/rpc/extension/: request.rs  response.rs
src/rpc/service/: daemon.rs  def.rs  defs.rs  error.rs  extension.rs  request.rs  response.rs  utils.rs
src/ui/: CMakeLists.txt  dialog.cpp  dialog.h  edit.h  error.rs  flags.rs  select.h  select.rs  setting.rs  setup.rs  utils.rs
