[package]
name = "qst-front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "qst-f"
test = false
bench = false


[dependencies]
iced = { version = "0.10", features = ["debug", "tokio"] }
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
iced_futures = "0.7.0"
iced_native = "0.10.3"
xlog-rs = { path = "./xlog-rs" }
[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
