[package]
name = "qst-front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
name = "qstf"

[[bin]]
name = "qst-f"
test = false
bench = false


[dependencies]
iced = { version = "0.10", features = ["debug", "tokio", "lazy", "advanced"] }
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
iced_futures = "0.7.0"
xlog-rs = "0.1.0"
async-trait = "0.1.73"
[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"] }
