[package]
name = "qst-front-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
name = "qstf"

[[bin]]
name = "qst-f"
test = false
bench = false


[dependencies]
iced = { version = "0.10", features = ["debug", "tokio", "lazy", "advanced"] }
tonic = "0.10.2"
tokio = { version = "1.33", features = ["full"] }
iced_futures = "0.7.0"
xlog-rs = "0.1.0"
prost = "0.12.1"
clap = { version = "4.4.7", features = ["derive"] }
[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
