[package]
name = "qst-frontend"
version = "0.1.1"
description = "QST frontend"
authors = ["kumudiaorong"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kumudiaorong/qst-frontend-rust.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "qst-f"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }
tonic-build = { version = "0.11.0", features = ["prost"] }

[dependencies]
tauri = { version = "1.6.1", features = ["shell-open"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
tonic = { version = "0.11.0" }
tokio = { version = "1.33", features = ["rt-multi-thread", "macros"] }
xlog-rs = { version = "0.3.1" }
prost = { version = "0.12.3" }
clap = { version = "4.5.1", features = ["derive"] }
regex = { version = "1.10.3" }
once_cell = { version = "1.19.0" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
